Create handler, controller, and view for countries list

--- a/Web/Views/Country/Index.cshtml
+++ b/Web/Views/Country/Index.cshtml
@@ -1,3 +1,11 @@
-﻿@{
+﻿@using Application.Queries.CountryList
+@model IList<CountryListDto>
+
+@{
     ViewData["Title"] = "Countries";
+}
+
+@foreach (var c in Model)
+{
+    <p>@c.Name</p>
 }
