--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -20,3 +20,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
