Add back button to country details page

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -5,9 +5,13 @@
     ViewData["Title"] = Model.Name;
 }
 
-<div class="container mt-5">
+<div class="container mt-1">
     <div class="row">
-        <h1>@Model.Name</h1>
-        <p>@Model.Description</p>
+        <div class="col h3">
+            <a href="." class="nav-link d-inline">
+                <span class="material-symbols-outlined fs-2" href=".">arrow_back</span>
+                Back
+            </a>
+        </div>
     </div>
 </div>
