--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -17,10 +17,14 @@
     <div class="row">
         <div class="col-md-4">
             <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Country Image">
-            <span class="badge text-bg-secondary fs-6">
+            <div class="badge text-bg-secondary fs-6 my-1">
                 <span class="material-symbols-outlined">things_to_do</span>
                 Capital: <span class="text-violet">@Model.Capital</span>
-            </span>
+            </div>
+            <div class="badge text-bg-secondary fs-6 my-1">
+                <span class="material-symbols-outlined">groups</span>
+                Population: <span class="text-violet">@Model.Population.ToString("###,###")</span>
+            </div>
         </div>
         <div class="col-md-8">
             <h1 class="display-1">@Model.Name</h1>
