Add beautiful area info badge to country details

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -25,6 +25,11 @@
                 <span class="material-symbols-outlined">groups</span>
                 Population: <span class="text-violet">@Model.Population.ToString("###,###")</span>
             </div>
+            <div class="badge text-bg-secondary fs-6 my-1">
+                <span class="material-symbols-outlined">globe</span>
+                Area: <span class="text-violet">@Model.Area.ToString("###,###") km<sup>2</sup></span>
+            </div>
+
         </div>
         <div class="col-md-8">
             <h1 class="display-1">@Model.Name</h1>
