Add fragments to list page to which the back button links

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -8,8 +8,8 @@
 <div class="container mt-1">
     <div class="row">
         <div class="col h3">
-            <a href="." class="nav-link d-inline">
-                <span class="material-symbols-outlined fs-2" href=".">arrow_back</span>
+            <a href=".#@Model.Name" class="nav-link d-inline">
+                <span class="material-symbols-outlined fs-2">arrow_back</span>
                 Back
             </a>
         </div>
