Natural resources list is beautiful now

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -59,9 +59,13 @@
     <div class="row">
         <div class="col">
             <h2>Natural Resources</h2>
-            @foreach (var resource in Model.NaturalResources)
+            @foreach (var resource in Model.NaturalResources)   
             {
-                <p>@resource.Name - @resource.Description</p>
+                <p>
+                    <span class="badge text-bg-light border fw-medium fs-6">
+                        <span class="badge custom-badge">@resource.Name</span> - @resource.Description
+                    </span>
+                </p>
             }
         </div>
     </div>
