--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -32,6 +32,11 @@ body {
     --bs-tooltip-zindex: 10000;
 }
 
+.custom-badge {
+    background-color: darkviolet;
+    color: white;
+}
+
 .text-violet {
     color: darkviolet;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
