--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -37,6 +37,11 @@ body {
     color: white;
 }
 
+.custom-badge-pink {
+    background-color: mediumvioletred;
+    color: white;
+}
+
 .text-violet {
     color: darkviolet;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
