Prettify details page

--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div>
             <div class="col-md-4 ship">
                 <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Country Image">
                 <div class="badge text-bg-secondary fs-6 my-1">
@@ -59,7 +59,7 @@
     <hr />
     <div class="row">
         <div class="col">
-            <h2>Natural Resources</h2>
+            <h2 class="mb-3">Natural Resources</h2>
             @foreach (var resource in Model.NaturalResources)   
             {
                 <p>
@@ -73,7 +73,7 @@
     <hr />
     <div class="row">
         <div class="col">
-            <h2>Specialties</h2>
+            <h2 class="mb-3">Specialties</h2>
             @foreach (var specialty in Model.Specialties)
             {
                 <p>
