Update protection level of classes

--- a/Web/Views/Character/Index.cshtml
+++ b/Web/Views/Character/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using Application.Queries.CharacterQueries
+@model IList<CharacterListDto>
+
+@{
+    ViewData["Title"] = "Characters";
 }
 
 <h1>Characters page</h1>
