Reduce bottom margin of image on character details page

--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div>
-            <div class="col-md-4 ship">
+            <div class="col-md-4 mb-0 ship">
                 <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Character Image">
             </div>
             <h1 class="display-1">@Model.Name</h1>
