--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -20,15 +20,17 @@
                 <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Character Image">
             </div>
             <h1 class="display-1">@Model.Name</h1>
-            <span class="badge text-bg-secondary fs-6" data-bs-toggle="tooltip" data-bs-title="@Model.OriginCountry.Description">
-                <span class="material-symbols-outlined" data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip"
-                      data-bs-placement="bottom" data-bs-title="Origin Country">flag</span>
-                @Model.OriginCountry.Name
-            </span>
+            <a class="text-decoration-none" asp-controller="Country" asp-action="@Model.OriginCountry.Name">
+                <span class="badge text-bg-secondary fs-6" data-bs-toggle="tooltip" data-bs-title="@Model.OriginCountry.Description">
+                    <span class="material-symbols-outlined" data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip"
+                          data-bs-placement="bottom" data-bs-title="Origin Country">flag</span>
+                    @Model.OriginCountry.Name
+                </span>
+            </a>
             <span class="badge text-bg-secondary fs-6">
                 <span class="material-symbols-outlined" data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip"
                       data-bs-placement="bottom" data-bs-title="Birth Date">calendar_month</span>
-                @Model.BirthDate
+                @Model.BirthDate.ToLongDateString()
             </span>
             <span class="badge text-bg-secondary fs-6">
                 <span class="material-symbols-outlined" data-bs-toggle="tooltip" data-bs-custom-class="custom-tooltip"
