Character details page reloads properly after creating a battle

--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -56,7 +56,7 @@
                 }
                 @foreach (var battle in Model.Battles)
                 {
-                    <div class="col-4">
+                    <div id="b-@battle.Id" class="col-4">
                         <div class="card mb-3">
                             <div class="card-header">
                                 <h4 class="card-title">@battle.Name</h4>
