Create battles list page with its associated controller action

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Character" asp-action="Index">Characters</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Battle" asp-action="Index">Battles</a>
+                        </li>
                     </ul>
                 </div>
             </div>
