--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -94,7 +94,7 @@
                     <div class="col-4">
                         <div class="card mb-3">
                             <div class="card-header">
-                                <h4 class="card-title">@character.Name</h4>
+                                <a asp-controller="Character" asp-action="@character.Name" class="text-decoration-none"><h4 class="card-title">@character.Name</h4></a>
                             </div>
                                 <img src="https://placehold.co/600x600" class="" />
                             <div class="card-body">
