Images are beautiflly displayed on the pages

--- a/Web/Views/Country/Index.cshtml
+++ b/Web/Views/Country/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="p-5 bg-light rounded-3">
             <div class="row p-5 bg-light rounded-3">
                 <div class="col-md-4">
-                    <img src="https://placehold.co/600x600" class="img-fluid rounded" alt="Country Image">
+                    <img src="@c.FlagUrl" class="img-fluid rounded" alt="Country Image">
                 </div>
                 <div class="col-md-8">
                     <div class="anchor-base">
