--- a/Web/Views/Character/Details.cshtml
+++ b/Web/Views/Character/Details.cshtml
@@ -17,7 +17,7 @@
     <div class="row">
         <div>
             <div class="col-md-4 mb-0 ship">
-                <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Character Image">
+                <img src="@Model.PortraitUrl" class="img-fluid rounded mb-3 sizy object-fit-cover" alt="Character Image">
             </div>
             <h1 class="display-1">@Model.Name</h1>
             <a class="text-decoration-none" asp-controller="Country" asp-action="@Model.OriginCountry.Name">
