--- a/Web/Views/Country/Details.cshtml
+++ b/Web/Views/Country/Details.cshtml
@@ -17,7 +17,7 @@
     <div class="row">
         <div>
             <div class="col-md-4 ship">
-                <img src="https://placehold.co/600x600" class="img-fluid rounded mb-3" alt="Country Image">
+                <img src="@Model.FlagUrl" class="img-fluid rounded mb-3" alt="Country Image">
                 <div class="badge text-bg-secondary fs-6 my-1">
                     <span class="material-symbols-outlined">things_to_do</span>
                     Capital: <span class="text-violet">@Model.Capital</span>
@@ -96,7 +96,7 @@
                             <div class="card-header">
                                 <a asp-controller="Character" asp-action="@character.Name" class="text-decoration-none"><h4 class="card-title">@character.Name</h4></a>
                             </div>
-                                <img src="https://placehold.co/600x600" class="" />
+                                <img src="@character.PortraitUrl" class="" />
                             <div class="card-body">
                                 <p class="card-text">@character.Description</p>
                             </div>
