--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Battle" asp-action="Index">Battles</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
