--- a/Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Views/Shared/_LoginPartial.cshtml
@@ -6,6 +6,9 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+    <li class="nav-item bg-success my-auto p-2 rounded">
+        <p class="mb-0">Boobs are here</p>
+    </li>
     <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
