Update navbar to contain link to natural resources

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Battle" asp-action="Index">Battles</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NaturalResource" asp-action="Index">Natural Resources</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
